fix vertical alignment of images

--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -329,14 +329,16 @@
   align-items: center;
 }
 
-.doc .imageblock img {
-  display: block;
-}
-
 .doc .imageblock img,
 .doc .image > img {
+  display: inline-block;
   height: auto;
   max-width: 100%;
+  vertical-align: middle;
+}
+
+.doc .image:not(.left):not(.right) > img {
+  margin-top: -0.2em;
 }
 
 #preamble .abstract blockquote {
